<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guardian</string>
    <string name="welcome_to_guardian">Welcome to Guardian!</string>
    <string name="setup_emergency_plan">Setup Emergency Plan</string>
    <string name="welcome_message">Guardian is the simplest way to feel safe while you\'re traveling.</string>
    <string name="welcome_message_two">Let\'s begin by setting up your Emergency Plan.</string>
    <string name="action_settings">Settings</string>
    <string name="nextButton">NEXT</string>
    <string name="title_activity_set_up_emergency_plan">SetUpEmergencyPlan</string>
    <string name="title_activity_assign_angel">AssignAngel</string>
    <string name="hello_world">Hello world!</string>
    <string name="set_up_emer_msg_title">Assign your Angel:</string>
    <string name="set_up_emer_msg">Your Angel is who Guardian will contact and send your location if you become unresponsive.</string>
    <string name="assign_angel_button_text">Assign Your Angel</string>
    <string name="title_activity_manage_guardian">ManageGuardian</string>
    <string name="title_activity_immobile_timer_screen_one">ImmobileTimerScreenOne</string>
    <string name="title_activity_immobile_timer_screen_two">ImmobileTimerScreenTwo</string>
    <string name="immobile_timer_message_one">If you remain immobile, and the timer counts down to 0:00, Guardian will ask if you are okay on your Pebble Watch.</string>
    <string name="immobile_timer_message_two">If you do not respond to the notification. Guardian will alert your Angel with your location details, and advise to contact the authorities.</string>
    <string name="immobile_timer_message">Your Default Immobile Timer is what will count down and trigger Guardian to contact your Angel when you become immobile for the designated amount of time.</string>
    <string name="set_timer_button">Set Immobile Timer</string>
    <string name="title_activity_immobile_timer">ImmobileTimer</string>
    <string name="title_activity_confirm_angel">ConfirmAngel</string>
    <string name="title_activity_send_text_to_angel">SendTextToAngel</string>
    <string name="predefined_text_message">Congratulations! You have been assigned as my Angel when I use the Guardian application.</string>
    <!--You will be alerted with my location, if I become immobile and unresponsive. Thanks for helping to keep me safe!</string> -->
    <string name="send_text_message_button">Message Angel</string>
    <string name="title_activity_timer">Timer</string>
    <string name="confirm_angel_header">Confirm Angel</string>
    <string name="confirm_angel_tv1">You have chosen</string>
    <string name="confirm_angel_tv2">as your Angel.</string>
    <string name="send_text_header">Message Angel</string>
    <string name="send_text_tv">Notify your Angel of their special role in your life. </string>
    <string name="pick_time">Pick Time</string>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector </string>
    <string name="immobile_timer1_title">Set Default Immobile Timer</string>
    <string name="manage_guardian_header">Manage Guardian</string>
    <string name="Yes">Yes, reset immobile timer.</string>
    <string name="setInactive">Set Guardian to inactive.</string>

</resources>
