<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guardian_white"
    tools:context="com.edward6chan.www.guardian.SetUpEmergencyPlan"
    android:id="@+id/emergency">

    <LinearLayout
        android:id="@+id/setup_screen_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/guardian_blue"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TitleSetupText"
            android:layout_below="@id/setup_screen_header"
            android:text="@string/setup_emergency_plan" />
    </LinearLayout>

    <TextView
        style="@style/SetupText"
        android:id="@+id/emer_msg_Title"
        android:layout_below="@id/setup_screen_header"
        android:text="@string/set_up_emer_msg_title"
        android:textSize="35dp"
        android:paddingTop="@dimen/text_padding_instructions"
        android:paddingBottom="@dimen/text_padding_instructions"

        />

    <TextView
        style="@style/SetupText"
        android:text="@string/set_up_emer_msg"
        android:id="@+id/guardian_name"
        android:layout_below="@+id/emer_msg_Title"
        android:textSize="24dp"
        android:paddingBottom="15dp"/>

    <ImageView
        style="@style/SetupImage"
        android:id="@+id/image_setupAngel"
        android:layout_below="@id/guardian_name"
        android:paddingTop="10dp"
        android:paddingBottom="35dp"
        android:src="@drawable/assign_angel"/>

    <Button
        style="@style/NextButton"
        android:text="@string/assign_angel_button_text"
        android:id="@+id/button"
        android:onClick="pickContact" />
</RelativeLayout>
