
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/guardian_white"
tools:context="com.edward6chan.www.guardian.ImmobileTimerScreenOne">
<LinearLayout
    android:id="@+id/timer1_screen_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:background="@color/guardian_blue"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/TitleSetupText"
        android:layout_below="@id/timer1_screen_header"
        android:text="@string/immobile_timer1_title" />
</LinearLayout>
<TextView
    style="@style/SetupText"
    android:text="@string/immobile_timer_message_one"
    android:id="@+id/immobile_timer_message_one"
    android:layout_below="@id/timer1_screen_header"
    android:textSize="@dimen/text_instructions_large"
    android:paddingTop="@dimen/text_padding_instructions"
    android:paddingBottom="@dimen/text_padding_instructions" />
<ImageView
    style="@style/SetupImage"
    android:id="@+id/immobile_timer_image_one"
    android:layout_below="@id/immobile_timer_message_one"
    />

<Button
    style="@style/NextButton"
    android:text="@string/nextButton"
    android:id="@+id/next_button_timer1"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="49dp"
    android:onClick="nextButton" />

</RelativeLayout>
