<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".WelcomeScreen"
android:background="@color/guardian_white"
 >


<LinearLayout
    android:id="@+id/confirmAngel_screen_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:background="@color/guardian_blue"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/TitleSetupText"
        android:layout_below="@id/confirmAngel_screen_header"
        android:text="@string/confirm_angel_header" />
</LinearLayout>

<TextView
    style="@style/SetupText"
    android:id="@+id/confirmAngel_tv1"
    android:layout_below="@id/confirmAngel_screen_header"
    android:text="@string/confirm_angel_tv1"
    android:textSize="@dimen/text_instructions_large"
    android:paddingTop="@dimen/text_padding_instructions"
    android:paddingBottom="@dimen/text_padding_instructions"/>

<ImageView
    style="@style/SetupImage"
    android:id="@+id/image_welcome"
    android:layout_below="@+id/confirmAngel_tv1"
    />

    <TextView
        style="@style/SetupText"
        android:id="@+id/tv_angel_info"
        android:layout_below="@+id/confirmAngel_tv1"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="Angel's Name and Number"
        android:textSize="@dimen/text_instructions_large"
        />
    <TextView
        style="@style/SetupText"
        android:id="@+id/confirmAngel_tv2"
        android:layout_below="@id/tv_angel_info"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/confirm_angel_tv2"
        android:textSize="@dimen/text_instructions_large"
        />





<LinearLayout
        android:id="@+id/confirmAngel_screen_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/guardian_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@id/confirmAngel_tv2">
    <Button
        android:onClick="cancelAngelButton"
        android:id="@+id/button_cancel"
        android:text="Cancel"
        android:background="@color/guardian_white"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/button_padding_instructions"
        android:textStyle="bold|normal"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/guardian_blue" />

    />

 <Button

    android:id="@+id/button_confirm"
     android:text="Confirm"
     android:onClick="confirmAngelButton"
     android:layout_width="180dp"
     android:layout_height="48dp"
     android:layout_centerHorizontal="true"
     android:layout_marginRight="@dimen/button_padding_instructions"
     android:background="@color/guardian_blue"
     android:textStyle="bold|normal"
     android:textSize="@dimen/button_text_size"
     android:textColor="@color/guardian_white"/>

 />
</LinearLayout>
</RelativeLayout>
